# nlpjang

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
amuthyst/: CMakeLists.txt
amuthyst/include/: autospace.hpp
amuthyst/src/: autospace.cpp
aquamaron/: CMakeLists.txt
aquamaron/include/: hiddenmarkovmodel.hpp
unittest/: CMakeLists.txt  unittest.cpp
